--- a/snack 3/index.html
+++ b/snack 3/index.html
@@ -7,9 +7,9 @@
     <title>Snack 3</title>
 </head>
 <body>
-    <div id="parte-1"></div>
-    <div id="parte-2"></div>
-    <div id="parte-3"></div>
+    <div id="1"></div>
+    <div id="2"></div>
+    <div id="3"></div>
 
     <script src="./main.js"></script>
 </body>
